fixed banner image overlay issue(on black bg the image was not visible)

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 * {
   margin: 0;
   color: black;
-  /* background-color: black; */
+  background-color: black;
   padding: 0;
   box-sizing: border-box;
 }
